# CR-SIM

crsim-3.33/: INSTALL.txt  Makefile.am  Makefile.in  README  config.h.in  configure.ac
crsim-3.33/doc/: Makefile.am  Makefile.in
crsim-3.33/etc/: Makefile.am  Makefile.in  PARAMETERS
crsim-3.33/m4/: netcdf.m4
crsim-3.33/share/crsim/: Makefile.am  Makefile.in
crsim-3.33/share/crsim/aux/: CHANGE_LOG  README  README~
crsim-3.33/share/crsim/aux/SBM_20/: INFO
crsim-3.33/share/crsim/test/: Makefile.am  Makefile.in  README  run_test1.sh  run_test2.sh  run_test2.sh.in  run_test3.sh  run_test4.sh  run_test4.sh.in
crsim-3.33/share/crsim/test/inp/rams_MP40/: PARAMETERS
crsim-3.33/share/crsim/test/inp/wrf_MP10/: PARAMETERS
crsim-3.33/share/crsim/test/inp/wrf_MP50/: PARAMETERS
crsim-3.33/share/crsim/test/logs/: README
crsim-3.33/src/: Makefile  Makefile.am  Makefile.in  ReadConfParameters.f90  ReadInpRAMSFile.f90  ReadInpRAMSFile.f90~  ReadInpWRFFile.f90  WriteOutNetcdf.f90  WriteOutNetcdf.f90~  crsim.f90  crsim.f90~  crsim_luts_mod.f90  crsim_luts_mod.mod  crsim_mod.f90  crsim_mod.f90~  crsim_mod.mod  crsim_subrs.f90  crsim_subrs_airborne.f90  crsim_subrs_airborne.f90~  crsim_subrs_postprocess.f90  phys_param_mod.f90  phys_param_mod.mod  postprocess_mod.f90  postprocess_mod.mod  wrf_rvar_mod.f90  wrf_rvar_mod.mod  wrf_var_mod.f90  wrf_var_mod.mod
crsim-3.33/src_3.32/: ReadInpRAMSFile.f90  ReadInpWRFFile.f90  WriteOutNetcdf.f90  crsim.f90  crsim_mod.f90  crsim_subrs.f90  wrf_rvar_mod.f90
crsim-4.0/: INSTALL.txt  Makefile  README  aclocal.m4  autogen.sh  config.status  configure  configure.ac
crsim-4.0/doc/: Makefile  Makefile.am  Makefile.in
crsim-4.0/etc/: Makefile  Makefile.am  Makefile.in  PARAMETERS
crsim-4.0/m4/: nccmp.m4
crsim-4.0/share/crsim/: Makefile  Makefile.am  Makefile.in
crsim-4.0/share/crsim/aux/: CHANGE_LOG  README
crsim-4.0/share/crsim/aux/P3/: INFO
crsim-4.0/share/crsim/aux/SBM_20/: INFO  bulkdens.asc_s_0_03_0_9  bulkradii.asc_s_0_03_0_9  masses.asc  termvels.asc
crsim-4.0/share/crsim/test/: Makefile  Makefile.am  Makefile.in  README  run_test1.sh.in  run_test3.sh.in
crsim-4.0/share/crsim/test/inp/rams_MP40/: PARAMETERS
crsim-4.0/share/crsim/test/inp/wrf_MP10/: PARAMETERS
crsim-4.0/share/crsim/test/inp/wrf_MP50/: PARAMETERS
crsim-4.0/src/: Makefile  Makefile.in  ReadConfParameters.f90  ReadInpRAMSFile.f90  ReadInpWRFFile.f90  WriteOutNetcdf.f90  crsim.f90  crsim_luts_mod.f90  crsim_mod.f90  crsim_subrs.f90  crsim_subrs_airborne.f90  crsim_subrs_postprocess.f90  phys_param_mod.f90  postprocess_mod.f90  wrf_rvar_mod.f90  wrf_var_mod.f90
