# ---------------------------------------------------------------------------
# COPYRIGHT    : Mariko Oue and Aleksandra Tatarevic
# ----------------------------------------------------------------------------
# PROJECT      : CRSIM
# FILE         : Makefile.am
# VERSION      : $Revision: $
# DATE         : $Date: $
# TYPE         : Automake file
# IDENTIFIER   : $Id: $
# ----------------------------------------------------------------------------
#
# This file contains the basic configuration for the generation of a Makefile
# ----------------------------------------------------------------------------
#
# LICENSE
# ----------------------------------------------------------------------------
#
# You may obtain a copy of the License distributed with this s/w package, 
# software distributed under the License is distributed on an “AS IS” BASIS, 
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See
# the License for the specific language governing permissions and limitations 
# under the License.
# ----------------------------------------------------------------------------
#
#
#
nobase_dist_pkgdata_DATA = \
                aux/CHANGE_LOG \
                aux/LLUTS3/ceilo/*.dat \
                aux/LLUTS3/cloud/*.dat \
                aux/LLUTS3/gh_ryzh/*.dat \
                aux/LLUTS3/graupel/*.dat \
                aux/LLUTS3/graupel_ar0.60/*.dat \
                aux/LLUTS3/graupel_ar0.80/*.dat \
                aux/LLUTS3/ice_ar0.20/*.dat \
                aux/LLUTS3/ice_ar0.90/*.dat \
                aux/LLUTS3/mpl/*.dat \
                aux/LLUTS3/partrimedice/*.dat \
                aux/LLUTS3/partrimedice_ar0.40/*.dat \
                aux/LLUTS3/partrimedice_ar0.60/*.dat \
                aux/LLUTS3/partrimedice_ar0.80/*.dat \
                aux/LLUTS3/raina/*.dat \
                aux/LLUTS3/rainb/*.dat \
                aux/LLUTS3/smallice/*.dat \
                aux/LLUTS3/snow_ar0.60/*.dat \
                aux/LLUTS3/unrimedice/*.dat \
                aux/LLUTS3/unrimedice_ar0.40/*.dat \
                aux/LLUTS3/unrimedice_ar0.60/*.dat \
                aux/LLUTS3/unrimedice_ar0.80/*.dat \
                aux/P3/INFO \
                aux/P3/*dat\
                aux/SBM_20/INFO\
                aux/SBM_20/bulk*\
                aux/SBM_20/*asc\
                test/inp/wrf_MP10/wrfout_d01* \
                test/inp/wrf_MP10/PARAMETERS \
                test/inp/wrf_MP50/P3_wrfout_d01_2011-05-20_10_00_00\
                test/inp/wrf_MP50/PARAMETERS \
                test/inp/rams_MP40/a-A-2013-06-19-210000-g3.h5\
                test/inp/rams_MP40/a-A-2013-06-19-210000-head.txt\
                test/inp/rams_MP40/PARAMETERS \
                test/out_ref/*.nc


testdir=$(pkgdatadir)/test/
logs_refdir=$(pkgdatadir)/test/logs_ref
logsdir=$(pkgdatadir)/test/logs
outdir=$(pkgdatadir)/test/out

dist_logs_ref_DATA = test/logs_ref/*.log
dist_logs_DATA=test/logs/*ME
dist_out_DATA=test/out/*ME

